--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,3 +3,6 @@
 export(brute_force_knapsack)
 export(dynamic_knapsack)
 export(greedy_knapsack)
+import(doParallel)
+import(foreach)
+import(parallel)
